<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/animal_picture_from_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_baseline_photo_library_24"
        app:showAsAction="ifRoom"
        android:visible="false">

    </item>
    <item android:id="@+id/take_animal_picture"
        android:title="@string/animal_pic"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        app:showAsAction="ifRoom">

    </item>
    <item android:id="@+id/add_new_animal_btn"
        android:title="@string/add_new_animal"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom"
        >

    </item>


</menu>