<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_edit_topLayout"
    android:background="@drawable/background_color">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/profile_edit_image"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@drawable/ic_launcher_background">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_edit_name"
            android:hint="@string/new_member_name"
            android:gravity="center"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_edit_age"
        android:hint="@string/age"
        android:visibility="gone"
        android:gravity="center"
        >

    </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/profile_edit_doneBtn"
        android:text="@string/save_changes"
        android:background="@drawable/circle_btn">

    </Button>
</LinearLayout>