<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:elevation="0dp"
    app:cardElevation="0dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/cardAnimalPicture"
            android:contentDescription="@string/animal_pic"
            >

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cardAnimalName"
            android:layout_marginStart="12dp"
            android:layout_alignParentBottom="true"
            android:textColor="#FFF"
            android:text="@string/animal_name"
            android:fontFamily="@font/delius_swash_caps"
            android:textStyle="bold"
            android:textSize="20sp"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cardAnimalType"
            android:layout_marginStart="12dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/cardAnimalName"
            android:textColor="#FFF"
            android:text="@string/animal_kind"
            android:fontFamily="@font/delius_swash_caps"
            android:textStyle="bold"
            android:textSize="20sp"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cardAnimalAge"
            android:layout_marginStart="12dp"
            android:layout_alignParentBottom="true"
            android:textColor="#FFF"
            android:text="@string/animal_age"
            android:fontFamily="@font/delius_swash_caps"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/cardAnimalType"
            >
        </TextView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>