<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_color"
        android:id="@+id/profile_header">


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:shapeAppearance="@style/circleImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/profile_image"
        >

    </com.google.android.material.imageview.ShapeableImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_marginStart="20dp"
        android:id="@+id/profile_name"
        >

    </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_header"
        android:background="@drawable/background_color">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_position"
        android:text="@string/Position"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        >

    </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_age"
            android:layout_below="@+id/profile_position"
            android:text="@string/age"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_arriving"
            android:layout_alignBaseline="@+id/profile_age"
            android:layout_toEndOf="@+id/profile_age"
            android:layout_marginStart="20dp"
            android:text="@string/arriving"
            android:textSize="30sp"
            >

        </TextView>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profile_openEditProfileBtn"
            android:layout_below="@id/profile_age"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:background="@drawable/circle_btn"
            android:layout_toEndOf="@+id/profile_setNewTask_Btn"
            android:layout_marginStart="30dp">

        </Button>
        <Button
            android:id="@+id/profile_setNewTask_Btn"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_below="@+id/profile_age"
            android:text="@string/add_task"
            android:background="@drawable/circle_btn"
            android:layout_marginStart="90dp"
            >

        </Button>
        <!--
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/pick_Time"
            android:text="@string/pick_time"
            android:layout_alignBaseline="@+id/profile_setNewTask_Btn"
            android:layout_toEndOf="@+id/profile_setNewTask_Btn"
            android:layout_below="@id/profile_openEditProfileBtn"
            android:background="@drawable/round_button_drawable"
            >

        </Button>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/pickDate_Btn"
            android:text="@string/pick_date"
            android:layout_below="@+id/pick_Time"
            android:background="@drawable/round_button_drawable"
            >

        </Button>
    -->
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/setAlarm_Btn"
            android:text="@string/set_alarm"
            android:background="@drawable/circle_btn"
            android:layout_below="@+id/profile_openEditProfileBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:visibility="gone"
            >

        </Button>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_tasks"
            android:layout_below="@+id/profile_setNewTask_Btn"
            android:layout_marginTop="20dp"
            >

        </ListView>
    </RelativeLayout>
</RelativeLayout>