<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_color"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/new_member_layout_picture"
            android:src="@drawable/ic_launcher_foreground"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/new_member_picture"
            >

        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutNewMember0"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:gravity="center"
                android:id="@+id/new_member_email"
                android:inputType="textEmailAddress"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutNewMember1"
            android:layout_below="@+id/textInputLayoutNewMember0"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:gravity="center"
                android:id="@+id/new_member_password"
                android:inputType="textPassword"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_member_positionTv"
            android:layout_below="@+id/textInputLayoutNewMember1"
            android:text="@string/Position"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            >

        </TextView>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_member_position_spinner"
            android:layout_below="@+id/textInputLayoutNewMember1"
            android:layout_centerInParent="true"
            android:popupBackground="@drawable/card_background_color"
            >

        </Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutNewMember3"
            android:layout_below="@+id/new_member_position_spinner"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_member_name"
                android:gravity="center"
                android:id="@+id/new_member_name"
                android:inputType="text"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutNewMember4"
            android:layout_below="@+id/textInputLayoutNewMember3"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_member_age"
                android:gravity="center"
                android:id="@+id/new_member_age"
                android:inputType="number"
                android:visibility="gone"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
</RelativeLayout>